@@ -108,6 +108,14 @@ tasks.test {
     }
 }
 
+tasks.withType<JavaExec> {
+    jvmArgs(
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED"
+    )
+}
+
 tasks.named<Test>("integrationTest") {
     useJUnitPlatform()
     jvmArgs(
